--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.7
   url_launcher: ^6.0.20
+  firebase_auth: ^3.3.9
 
 
 dev_dependencies:
