Enable Web Support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cloud_firestore: ^3.1.7
   url_launcher: ^6.0.20
   firebase_auth: ^3.3.9
+  shared_preferences: ^2.0.13
+
+
 
 
 dev_dependencies:
