--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.12.0
-  cloud_firestore: ^3.1.7
-  url_launcher: ^6.0.20
-  firebase_auth: ^3.3.9
-  shared_preferences: ^2.0.13
-  get: ^4.6.5
+  firebase_core:
+  cloud_firestore:
+  url_launcher:
+  firebase_auth:
+  shared_preferences:
+  get:
 
 dev_dependencies:
   flutter_test:
