--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,18 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-#  firebase_core: ^1.12.0
-  firebase_core: ^3.10.1
-#  cloud_firestore: ^3.1.7
-  cloud_firestore: ^5.6.2
-#  url_launcher: ^6.0.20
-  url_launcher: ^6.3.1
-#  firebase_auth: ^3.3.9
-  firebase_auth: ^5.4.1
-#  shared_preferences: ^2.0.13
-  shared_preferences: ^2.4.0
-#  get: ^4.6.5
-  get: ^4.6.6
+  firebase_core:
+  cloud_firestore:
+  url_launcher:
+  firebase_auth:
+  shared_preferences:
+  firebase_analytics: ^11.4.1
+  get:
 
 dev_dependencies:
   flutter_test:
